Bug 1286026 - Don't warn for invalid WebGL script types, and include the invalid script type. r=dom-core,farre

This patch changes the invalid script tag warning to actually include the
invalid tag, which makes it easier to understand what is going wrong.

WebGL pages use invalid types on script elements to store strings. These three
specific strings are used in hundreds of places in our WebGL tests, so don't
warn for them. The first two can be found in WebGL tutorials, so this seems like
an actual convention. "text/something-not-javascript" looks like it is only
used in the WebGL conformance tests, but it is clearly deliberately invalid
so skip warning for it, too, in the interests of reducing warning spam.

I didn't use NS_WARNING_ASSERTION here because that includes the entire
expression that failed, and that is large and not very useful.

Differential Revision: https://phabricator.services.mozilla.com/D212799